data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_159.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\95\80\80\80\00\01\03\65\6e\76\0d\65"
    "\78\74\65\72\6e\61\6c\5f\66\75\6e\63\00\00\03\82"
    "\80\80\80\00\01\00\07\8d\80\80\80\00\01\09\74\65"
    "\73\74\5f\66\75\6e\63\00\01\0a\9c\80\80\80\00\01"
    "\96\80\80\80\00\00\02\7f\02\7f\41\0a\10\00\41\14"
    "\0c\01\0b\41\02\6c\0b\41\05\6a\0b"
  )
""
)